[gd_scene load_steps=14 format=3 uid="uid://xkne821yl0cm"]

[ext_resource type="PackedScene" uid="uid://bxxbcpifaqast" path="res://Brick.tscn" id="1_3ar6t"]
[ext_resource type="PackedScene" uid="uid://d0ow4678gi0oj" path="res://Paddle.tscn" id="1_bscn7"]
[ext_resource type="Script" path="res://Game.gd" id="1_u5ieo"]
[ext_resource type="PackedScene" uid="uid://dsmr4741syvqb" path="res://Projectile.tscn" id="3_1nrhx"]
[ext_resource type="Script" path="res://Scoreboard.gd" id="5_8aqk7"]
[ext_resource type="PackedScene" uid="uid://b23iivu8m31rg" path="res://PointNotification.tscn" id="6_v3mxi"]
[ext_resource type="Script" path="res://SoundManager.gd" id="7_c3gmv"]
[ext_resource type="AudioStream" uid="uid://dsanwgp28w612" path="res://assets/20132__gezortenplotz__bouncing_off_glass.wav" id="8_c41ki"]
[ext_resource type="AudioStream" uid="uid://wybabol36vae" path="res://assets/89012__shimsewn__popchuffbounce.wav" id="9_pdtfj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vldnm"]
size = Vector2(1192, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ckqff"]
size = Vector2(20, 648)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ii8hu"]
size = Vector2(1192, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_frqul"]
size = Vector2(20, 40)

[node name="Game" type="Node2D"]
script = ExtResource("1_u5ieo")
brick_scene = ExtResource("1_3ar6t")

[node name="BrickContainer" type="Node2D" parent="."]

[node name="Paddle" parent="." instance=ExtResource("1_bscn7")]
position = Vector2(576, 552)

[node name="Projectile" parent="." instance=ExtResource("3_1nrhx")]
position = Vector2(420, 373)
speed = 400.0

[node name="BounceableBoundaries" type="StaticBody2D" parent="." groups=["bounceable", "static_bounceable"]]

[node name="Top" type="CollisionShape2D" parent="BounceableBoundaries"]
position = Vector2(576, -10)
shape = SubResource("RectangleShape2D_vldnm")

[node name="Left" type="CollisionShape2D" parent="BounceableBoundaries"]
position = Vector2(-10, 324)
shape = SubResource("RectangleShape2D_ckqff")

[node name="Right" type="CollisionShape2D" parent="BounceableBoundaries"]
position = Vector2(1162, 324)
shape = SubResource("RectangleShape2D_ckqff")

[node name="LossArea" type="StaticBody2D" parent="." groups=["loss_zone"]]

[node name="Bottom" type="CollisionShape2D" parent="LossArea"]
position = Vector2(576, 678)
shape = SubResource("RectangleShape2D_ii8hu")
debug_color = Color(0.498039, 0.247059, 0.247059, 0.419608)

[node name="BottomLeft" type="CollisionShape2D" parent="LossArea"]
position = Vector2(-10, 668)
shape = SubResource("RectangleShape2D_frqul")
debug_color = Color(0.498039, 0.247059, 0.247059, 0.419608)

[node name="BottomRight" type="CollisionShape2D" parent="LossArea"]
position = Vector2(1162, 668)
shape = SubResource("RectangleShape2D_frqul")
debug_color = Color(0.498039, 0.247059, 0.247059, 0.419608)

[node name="Scoreboard" type="Control" parent="." groups=["scoreboard"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_8aqk7")
points_notification_scene = ExtResource("6_v3mxi")

[node name="ScoreTotals" type="MarginContainer" parent="Scoreboard"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="ScoreLabel" type="Label" parent="Scoreboard/ScoreTotals"]
layout_mode = 2
size_flags_vertical = 8

[node name="Notifications" type="CanvasLayer" parent="Scoreboard"]

[node name="CenterContainer" type="CenterContainer" parent="Scoreboard/Notifications"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Scoreboard/Notifications/CenterContainer"]
layout_mode = 2

[node name="PointAwards" type="VBoxContainer" parent="Scoreboard/Notifications/CenterContainer/PanelContainer"]
layout_mode = 2

[node name="SoundManager" type="Node2D" parent="." groups=["sound_manager"]]
script = ExtResource("7_c3gmv")

[node name="BreakBrickAudio" type="AudioStreamPlayer2D" parent="SoundManager"]
stream = ExtResource("8_c41ki")

[node name="BounceAudio" type="AudioStreamPlayer2D" parent="SoundManager"]
stream = ExtResource("9_pdtfj")
